--- a/Expanding-Cards/styles.css
+++ b/Expanding-Cards/styles.css
@@ -50,9 +50,10 @@ body {
   flex: 5;
 }
 
-/* When the panel has active class make h3 visible */
+/* When the panel has active class make h3 visible & trasition with 0.4s delay to hide jumps */
 .panel.active h3 {
   opacity: 1;
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
 /* When the screen size is mobile, lets remove last 2 */
